--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "20.14.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "sass": "^1.77.6",
-    "typescript": "^5"
+    "typescript": "5.5.2"
   }
 }
