--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.2.4",
     "react": "^18",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18",
     "recoil": "^0.7.7"
   },
