--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
-    "js-cookie": "^3.0.5",
     "next": "14.2.4",
-    "nookies": "^2.5.2",
     "react": "^18",
-    "react-dnd": "^16.0.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "recoil": "^0.7.7",
     "universal-cookie": "^7.1.4"
